# cover-letter-llm

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  flake.nix  fly.toml  pyproject.toml  renovate.json
ai/: llm.py  prompts.py  structured.py
models/: job_schema.py  resume_schema.py
parsers/: html_parser.py  job_parser.py  resume_parser.py
services/: cover_letter_service.py  job_service.py  resume_service.py
