[tool.poetry]
name = "cover-letter-llm"
version = "0.1.0"
description = ""
authors = ["Kavish Hukmani <khukmani@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain = "1.3.2"
langchain-community = "0.4.2"
langchain-openai = "1.2.2"
html2text = "2025.4.15"
streamlit = "1.58.0"
pypdf = "6.12.2"
pyperclip = "1.11.0"
python-dotenv = "1.2.2"
playwright = "1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
