[tool.poetry]
name = "cover-letter-llm"
version = "0.1.0"
description = ""
authors = ["Kavish Hukmani <khukmani@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain = "1.3.0"
langchain-community = "0.4.1"
langchain-openai = "1.2.1"
html2text = "2025.4.15"
streamlit = "1.57.0"
pypdf = "6.11.0"
pyperclip = "1.11.0"
python-dotenv = "1.2.2"
playwright = "1.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"